[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "para-walk"
version = "1.0.0"
description = "a simple parallel version of os.walk"
readme = "README.md"
authors = [{ name = "Shiqi Yang", email = "yangshiqi@mail.cbi.pku.edu.cn" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"    
]
keywords = ["parallel", "walk"]
dependencies = [ "tqdm" ]
requires-python = ">=3.5"

[project.urls]
Homepage = "https://github.com/shiqi-yang/para_walk"

